# renfe_mcp_server

./: .env.example  .gitignore  AUTHENTICATION.md  README.md  main.py  price_checker.py  pyproject.toml  security.py  station_service.py  test_security.py  test_station_service.py  test_zip_security.py
renfe_scraper/: scraper.py
src/renfe_mcp/: __init__.py  exceptions.py
src/renfe_mcp/scraper/: scraper.py
tests/: test_custom_scraper.py  test_final_integration.py  test_pagination.py  test_price_checker.py  test_price_pagination.py  test_updated_price_checker.py
